Fix the appearance of menu entries when hovering over them
The hover property of menu was missed earlier. That's been added
now. Additionally, the height property of the menu item had to be
adjusted so that it doesn't look awkward when we hover over a menu
item.

--- a/accuconf/static/accuconf.css
+++ b/accuconf/static/accuconf.css
@@ -9,13 +9,18 @@ body {
 
 #menu {
     background-color: 6666aa;
-    height: 2em;
-    padding: 2px 0 5px 1px;
+    height: 1.8em;
+    padding: 2px 0 5px 0px;
 }
 
 .menuitem {
     color: white;
 }
+
+.menuitem:hover {
+    background-color: 6666ff;
+}
+
 
 .maincontent {
     padding: 5px 0 5px 0;
